crates/ark/src/snapshots/ark__view__tests__view_function.snap
---
source: crates/ark/src/view.rs
expression: doc
---
URI: ark:ark-*pid*/global/foo.R

function (arg) 
body
