crates/ark/src/snapshots/ark__view__tests__view_function_local.snap
---
source: crates/ark/src/view.rs
expression: doc
---
URI: ark:ark-*pid*/0x*address*/foo.R

function (arg) 
body
