crates/ark/src/snapshots/ark__view__tests__view_function_unknown.snap
---
source: crates/ark/src/view.rs
expression: doc
---
URI: ark:ark-*pid*/global/unknown.R

function (arg) 
body
